--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,7 +12,7 @@
     <div class="centered">
         <h2>Error!</h2>
         <p>You don't have the credentials to use this feature!</p>
-        <a class="my-button" th:href = "@{/wl/login}" type="button">Take me back</a>
+        <a class="my-btn" th:href = "@{/login}" type="button">Take me back</a>
     </div>
 </div>
 </body>
